Quorum/Library/Tests/TypeCheckerGenerated/Pass/RetAssignObjectNumObjField.quorum
class Main
    Object v = Test()
    action Main
        Number var = cast(Number, v)
        if var:GetValue() = 5.0
            output "passed"
        end
    end

    action Test() returns Object
        Number var
        var:SetValue(5.0)
        return var
    end
end