Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignIntObjNumberField.quorum
class Main
    Integer v
    action Main
        v:SetValue(Test())
    end

    action Test() returns Integer
        number var = 5.0
        return var
    end
end